--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "babar": "^0.2.0",
+    "csv-parser": "^3.0.0",
     "lodash": "^4.17.21"
   },
   "dependencies": {
